@@ -1,0 +1,2 @@
+GFXINC +=	$(GFXLIB)/drivers/gdisp/Fb24bpp
+GFXSRC +=	$(GFXLIB)/drivers/gdisp/Fb24bpp/gdisp_lld_fb24bpp.c
