@@ -16,6 +16,7 @@ FEATURE:	Added GDISP_IMAGE_PNG_Z_BUFFER_SIZE configuration option
 FEATURE:	Added GDISP_IMAGE_GIF_BLIT_BUFFER_SIZE configuration option
 FIX:		Fixed extra dots when drawing anti-aliased fonts with wordwrap
 FEATURE:	Increase non-UTF8 font support to 0 to 255 rather than just the true ascii set
+FEATURE:	Added Fb24bpp driver for RGB888 and BGR888 packed framebuffer displays
 
 
 *** Release 2.7 ***
